# Loki11

./: .gitignore  CMakeLists.txt  README.md
Loki11/: CMakeLists.txt  EmptyType.hpp  Functor.hpp  HierarchyGenerator.hpp  LokiTypeInfo.hpp  NullType.hpp  Singleton.hpp  SmallObj.hpp  SmartPtr.hpp  Threads.hpp  TypeManip.hpp  TypeTraits.hpp  Typelist.hpp  static_check.hpp
test/: CMakeLists.txt  main.cpp
test/src/: emptyTypeTest.cpp  emptyTypeTest.h  functorTest.cpp  functorTest.h  hierarchyGeneratorTest.cpp  hierarchyGeneratorTest.h  nullTypeTest.cpp  nullTypeTest.h  staticCheckTest.cpp  staticCheckTest.h  typeInfoTest.cpp  typeInfoTest.h  typeManipTest.cpp  typeManipTest.h  typeTraitsTest.cpp  typeTraitsTest.h  typelistTest.cpp  typelistTest.h
